other-vpol/restrict-ingress-classes/.kyverno-test-exceptions/partial-resources.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: partial-class-approved
  namespace: default
  annotations: {kubernetes.io/ingress.class: custom}
spec: {rules: []}
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: partial-class-forbidden
  namespace: default
  annotations: {kubernetes.io/ingress.class: forbidden}
spec: {rules: []}
